# adjunction

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: adjunction.rs  counit.rs  forgetful.rs  free.rs  lib.rs  reflective.rs  unit.rs
